--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,8 @@
 <footer>
+  
   <h2>All rights reserved.</h2>
-  <h3>@charlesbrendon</h3>
+  
+  <a href="https://www.linkedin.com/in/charles-suzart-851a9271/" target="_blank"> @CharlesBrendon</a>
+</a>
+ 
 </footer>
