--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -17,47 +17,47 @@
           <legend>Cadastre seu Pokemon</legend>
 
           <fieldset>
-            <input type="text" name="name"/>
+            <input required type="text" name="name"/>
             <label for="name"> Nome: </label>
           </fieldset>
 
           <fieldset>
-            <input type="text" name="height" />
-            <label for="height"> Altura: </label>
+            <input required type="text" name="height" />
+            <label for="height"> Altura(m): </label>
           </fieldset>
 
           <fieldset>
-            <input type="text" name="weight" />
-            <label for="weight"> Peso: </label>
+            <input required type="text" name="weight" />
+            <label for="weight"> Peso(kg): </label>
           </fieldset>
 
           <fieldset>
-            <input type="text" name="gender" />
+            <input required type="text" name="gender" />
             <label for="gender"> Genero: </label>
           </fieldset>
 
           <fieldset>
-            <input type="text" name="category" />
+            <input required type="text" name="category" />
             <label for="category"> Categoria: </label>
           </fieldset>
 
           <fieldset>
-            <input type="text" name="abilites" />
+            <input required type="text" name="abilites" />
             <label for="abilites"> Habilidades: </label>
           </fieldset>
          
           <fieldset>
-            <input type="text" name="tipo" />
-            <label for="tipo"> Tipo: </label>
+            <input required placeholder="Separe os tipos com virgula e espaço" type="text" name="type1" />
+            <label for="type1"> Tipo: </label>
           </fieldset>
 
           <fieldset>
-              <input type="text" name="weakness" />
-              <label for="weakness"> Ele é fraco contra: </label>
+              <input required placeholder="Separe os tipos com virgula e espaço" type="text" name="weakness1" />
+              <label for="weakness1"> Ele é fraco contra: </label>
           </fieldset>       
                   
           <fieldset>
-            <input type="url" name="image" />
+            <input required type="url" name="image" />
             <label for="image"> Link da Imagem: </label>
           </fieldset>
 
